just a gap fixed on menu, from 20 to 25 px

--- a/src/app/components/template/header/header.component.css
+++ b/src/app/components/template/header/header.component.css
@@ -38,7 +38,7 @@
 .header__menu > ul {
   display: flex;
   align-items: center;
-  gap: 20px;
+  gap: 25px;
   list-style-type: none;
   margin-bottom: 0;
   padding-left: 0;
